# DSInvariant

./: .gitignore  ListSet.v  Makefile  MyStdlib.opam  README.md  loopinvgen.sh
--/: LIG.ml  SetProblem.ml  SetVPie.ml  SyGuS_Set.ml  Synthesizer.ml  Type.ml  Value.ml  full-problem-lemma.sl  full-problem.sl  hardest-problem.sl  tester.file
--/myStdlib/: my_dict.ml  ounit_general_extensions.ml
--/myth/: gen.ml  lang.ml  rtree.ml  synml.ml  synth.ml  typecheck.ml  util.ml
code/: Makefile  build_all.sh  create-default-answers.py  generate-data.py  log  test_all.sh  tester.file
code/app/: App.ml  dune  log
code/benchmarks/: binary_search_tree_@_set.ds  binary_search_tree_set.accum  binary_search_tree_set.ds  cache_minimal.ds  cache_minimal_incorrect.ds  list_@_max_heap.ds  nat_nat_option_@_range.ds  range.ds  range_trivial.ds  sized_list.ds  sorted_list_@_set.ds  sorted_list_set.accum  sorted_list_set.ds  stutter_list.ds  unique_list.ds  unique_list_@_set.accum  unique_list_set.ds
code/ds_benchmarks/: nat_set.ds  sorted_list_set.ds
code/generated_data/: REAL_GENERATED_DATA.CSV  beforetonightoptimzationholymoly.csv  data.csv  fastandcomplete.csv  fastbutnotlazy.csv  old.csv  (+11 more)
myStdlib/: dune  my_hash_cons.ml  my_hash_cons_set.ml  my_set.ml
myth_system/: notes.org
notes/: 01-09-18.txt  1-09-19.txt  1-15-18.txt  1-22-18.txt  12-10-18.txt  12-19-18.txt  2-20-19.txt  2-22-19.txt  2-5-18.txt  3-18-19.txt  3-5-19.txt  4-16-19.txt  4-2-19.txt  4-23-19.txt  4-9-19.txt  9-4-19.txt
src/: SIG.ml  SPIE.ml  SetSimulator.ml  SetVPie.ml  TestBed.ml
synml_fork/: Makefile
(+377 files in other folders)
